src/components/protected/GameSelect/Table/styles.module.scss
@import 'SCSS/variables.scss';

.GameTable {
  padding: 0 15px;
  width: 90%;
  margin: 0 auto;
  line-height: $lh;
  min-height: 280px;

  thead > tr {
    border-bottom: 2px solid rgba(0, 0, 0, 0.2);
  }
  tr {
    max-height: $lh;
    &:first-of-type {
      th {
        font-weight: 800;

        &:nth-child(1) {
          text-align: left;
          width: 50%;
        }
        &:nth-child(n + 2) {
          width: 25%;
        }
      }
    }

    td {
      max-height: $lh;
      padding: $lh/2 0;
      &:nth-child(1) {
        text-align: left;
        width: 50%;
      }
      &:nth-child(n + 2) {
        width: 25%;
        text-align: center;
      }
    }
  } // tr

  tfoot {
    height: 100%;
  }
}

.pagination {
  width: 90%;
  margin: 0 auto;
  line-height: $lh;
  display: flex;
  min-height: 50px;
  justify-content: space-between;
  p {
    padding: $lh/2 0;

    &.inactive {
      opacity: 0.2;
    }
  }
}

.noGames {
  padding: $lh / 2 0;
}

